# invariant-monorepo

./: .gitignore  Cargo.toml  Dockerfile.release  LICENSE.md  README.md  cheat-sheet.sh  docker-compose.yml  netlify.toml
clients/invariant_mobile/: LICENSE.md  README.md  pubspec.yaml
clients/invariant_mobile/android/: gradle.properties
clients/invariant_mobile/android/app/: build.gradle.kts
clients/invariant_mobile/android/app/src/main/: AndroidManifest.xml
clients/invariant_mobile/android/app/src/profile/: AndroidManifest.xml
clients/invariant_mobile/lib/: api_client.dart  main.dart  theme_manager.dart
clients/invariant_mobile/lib/screens/: auth_screen.dart  boot_loader.dart  identity_card.dart  leaderboard_screen.dart  onboarding_screen.dart
clients/invariant_mobile/lib/services/: miner_service.dart  notification_manager.dart  push_service.dart  update_service.dart
clients/invariant_mobile/lib/utils/: genesis_logic.dart  time_helper.dart
clients/invariant_mobile/lib/widgets/: genesis_ring.dart  grid_painter.dart
clients/invariant_mobile/test/: widget_test.dart
crates/invariant_engine/: Cargo.toml  INVARIANT_AUDIT_REPORT.json
crates/invariant_engine/src/: attestation.rs  core.rs  crypto.rs  error.rs  lib.rs  ports.rs
crates/invariant_engine/tests/: attestation_tests.rs  audit_suite.rs  metadata_parsing.rs
crates/invariant_server/: Cargo.toml
crates/invariant_server/migrations/: 20250101000000_init_schema.sql  20250101000001_sybil_harden.sql  20250101000002_deadmans_switch.sql  20250101000003_heartbeat_hardening.sql  20250101000004_hardware_metadata.sql  20250102000000_guardrails.sql  20250103000000_add_streak.sql  20250104000000_production_hardening.sql  20250104000001_production_hardening.sql  20250105000000_add_fcm_token.sql  20260116000000_add_last_attestation.sql
crates/invariant_server/src/: api_docs.rs  db.rs  error_response.rs  impls.rs  main.rs  state.rs
crates/invariant_server/src/handlers/: genesis.rs  heartbeat.rs  identity.rs  mod.rs
crates/invariant_server/src/services/: push.rs
crates/invariant_server/tests/: stress_test.rs
crates/invariant_shared/: Cargo.toml
crates/invariant_shared/src/: genesis.rs  heartbeat.rs  identity.rs  lib.rs  reattestation.rs
invariant-web/: package-lock.json  package.json  tailwind.config.ts
invariant-web/public/: version.json
invariant-web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
invariant-web/src/app/about/: page.tsx
invariant-web/src/app/contact/: page.tsx
invariant-web/src/app/docs/: page.tsx
invariant-web/src/app/impact/: page.tsx
invariant-web/src/app/inv/: page.tsx
invariant-web/src/app/legal/privacy/: page.tsx
invariant-web/src/app/pilot/: page.tsx
invariant-web/src/app/whitepaper/: page.tsx
invariant-web/src/components/: Footer.tsx  Header.tsx
invariant-web/src/lib/: api.ts
invariant_sdk/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
invariant_sdk/android/: build.gradle  settings.gradle
invariant_sdk/android/src/main/: AndroidManifest.xml
invariant_sdk/android/src/main/kotlin/tech/invariant/invariant_sdk/: InvariantSdkPlugin.kt
invariant_sdk/android/src/test/kotlin/tech/invariant/invariant_sdk/: InvariantSdkPluginTest.kt
invariant_sdk/example/: README.md  pubspec.yaml
invariant_sdk/example/android/app/: build.gradle.kts
invariant_sdk/example/android/app/src/main/: AndroidManifest.xml
invariant_sdk/example/android/app/src/main/kotlin/tech/invariant/invariant_sdk_example/: MainActivity.kt
invariant_sdk/example/lib/: main.dart
invariant_sdk/example/test/: widget_test.dart
invariant_sdk/lib/: invariant_sdk.dart
invariant_sdk/lib/src/: api_client.dart
(+1 files in other folders)
