[workspace]
resolver = "2"
members = [
    "crates/invariant_shared",
    "crates/invariant_engine",
    "crates/invariant_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Invariant Architect"]
license = "BSL-1.1"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
anyhow = "1.0"

# --- Crypto & Security ---
p256 = { version = "0.13", features = ["ecdsa", "std"] }
signature = "2.0"
sha2 = "0.10"
x509-parser = {version = "0.16", features = ["verify"] }
der-parser = "9.0"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"

# --- Server & Database ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter", "json"] }
base64 = "0.21"
ring = { version = "0.17", features = ["std"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
once_cell = "1.18" # For Rate Limiter state


# --- Admin UI ---
futures = "0.3"
ratatui = "0.26"
# FIX: Enable event-stream feature
crossterm = { version = "0.27", features = ["event-stream"] }