# crates/invariant_engine/Cargo.toml
[package]
name = "invariant_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "BUSL-1.1"

[dependencies]
# Internal
invariant_shared = { path = "../invariant_shared" }

# External (Inherited from Workspace)
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Crypto & Attestation
p256 = { workspace = true } 
sha2 = { workspace = true }
signature = { workspace = true }
x509-parser = { workspace = true } 
der-parser = { workspace = true }  
hex = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand_core = { workspace = true } 